--- a/Alicargo.BlackBox.Tests/app.config
+++ b/Alicargo.BlackBox.Tests/app.config
@@ -2,11 +2,8 @@
 
 <configuration>
 	<configSections>
-		<sectionGroup name="userSettings"
-		              type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-			<section name="Alicargo.BlackBox.Tests.Properties.Settings"
-			         type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-			         allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+		<sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+			<section name="Alicargo.BlackBox.Tests.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
 		</sectionGroup>
 	</configSections>
 	<appSettings>
@@ -22,11 +19,8 @@
 		<add key="DefaultFrom" value="robot@alicargo.ru" />
 	</appSettings>
 	<connectionStrings>
-		<add name="Alicargo.BlackBox.Tests.Properties.Settings.MainConnectionString"
-		     connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
-		<add name="Alicargo.BlackBox.Tests.Properties.Settings.FilesConnectionString"
-		     connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True"
-		     providerName="" />
+		<add name="Alicargo.BlackBox.Tests.Properties.Settings.MainConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
+		<add name="Alicargo.BlackBox.Tests.Properties.Settings.FilesConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True" providerName="" />
 	</connectionStrings>
 	<userSettings>
 		<Alicargo.BlackBox.Tests.Properties.Settings>
@@ -56,7 +50,7 @@
 			<dependentAssembly>
 				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-5.1.0.0" newVersion="5.1.0.0" />
-			</dependentAssembly>
+			</dependentAssembly>			
 		</assemblyBinding>
 	</runtime>
 </configuration>
