--- a/Alicargo.Core.Tests/app.config
+++ b/Alicargo.Core.Tests/app.config
@@ -2,11 +2,8 @@
 
 <configuration>
 	<configSections>
-		<sectionGroup name="userSettings"
-		              type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-			<section name="Alicargo.Core.Tests.Properties.Settings"
-			         type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-			         allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+		<sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+			<section name="Alicargo.Core.Tests.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
 		</sectionGroup>
 	</configSections>
 	<system.net>
@@ -28,7 +25,7 @@
 			<dependentAssembly>
 				<assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-4.2.1402.2112" newVersion="4.2.1402.2112" />
-			</dependentAssembly>			
+			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
 </configuration>
