--- a/Alicargo.Jobs.BlackBox.Tests/app.config
+++ b/Alicargo.Jobs.BlackBox.Tests/app.config
@@ -4,10 +4,8 @@
 	<configSections>
 	</configSections>
 	<connectionStrings>
-		<add name="Alicargo.Jobs.BlackBox.Tests.Settings.MainConnectionString"
-		     connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
-		<add name="Alicargo.Jobs.BlackBox.Tests.Settings.FilesConnectionString"
-		     connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True" />
+		<add name="Alicargo.Jobs.BlackBox.Tests.Settings.MainConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
+		<add name="Alicargo.Jobs.BlackBox.Tests.Settings.FilesConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True" />
 	</connectionStrings>
 	<appSettings>
 		<add key="JobPausePeriod" value="00:00:05" />
@@ -17,6 +15,26 @@
 			<dependentAssembly>
 				<assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-4.2.1402.2112" newVersion="4.2.1402.2112" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-5.1.0.0" newVersion="5.1.0.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Ploeh.AutoFixture" publicKeyToken="b24654c590009d4f" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-3.18.1.0" newVersion="3.18.1.0" />
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
