--- a/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
+++ b/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
@@ -50,7 +50,7 @@
       <Link>Properties\ProjectInfo.cs</Link>
     </Compile>
     <Compile Include="Contracts\AirWaybillAggregate.cs" />
-    <Compile Include="Contracts\Application\ApplicationData.cs" />
+    <Compile Include="Contracts\Application\ApplicationEditData.cs" />
     <Compile Include="Contracts\EventData.cs" />
     <Compile Include="Contracts\ApplicationEventTemplateData.cs" />
     <Compile Include="Contracts\Application\ApplicationExtendedData.cs" />
