--- a/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
+++ b/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Helpers\OrderType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Application\IAwbFileRepository.cs" />
+    <Compile Include="Repositories\User\IManagerRepository.cs" />
     <Compile Include="Resources\ApplicationFileType.Designer.cs">
       <DependentUpon>ApplicationFileType.resx</DependentUpon>
       <AutoGen>True</AutoGen>
