--- a/Alicargo.TestHelpers/Alicargo.TestHelpers.csproj
+++ b/Alicargo.TestHelpers/Alicargo.TestHelpers.csproj
@@ -80,6 +80,7 @@
   <ItemGroup>
     <Compile Include="ColsoleLogger.cs" />
     <Compile Include="CompositionHelper.cs" />
+    <Compile Include="DateTimeProviderStub.cs" />
     <Compile Include="DbTestContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MockContainer.cs" />
