--- a/Alicargo.Core.Contracts/Alicargo.Core.Contracts.csproj
+++ b/Alicargo.Core.Contracts/Alicargo.Core.Contracts.csproj
@@ -53,6 +53,11 @@
     </Compile>
     <Compile Include="AirWaybill\IApplicationAwbManager.cs" />
     <Compile Include="AirWaybill\IAwbManager.cs" />
+    <Compile Include="Calculation\BillSettings.cs" />
+    <Compile Include="Exceptions\AccessForbidenException.cs" />
+    <Compile Include="Exceptions\EntityNotFoundException.cs" />
+    <Compile Include="Exceptions\InvalidLogicException.cs" />
+    <Compile Include="Exceptions\UnexpectedStateException.cs" />
     <Compile Include="State\IAwbStateManager.cs" />
     <Compile Include="Calculation\ICalculationService.cs" />
     <Compile Include="Calculation\IExcelClientCalculation.cs" />
