--- a/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
+++ b/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Contracts\ApplicationEventTemplateData.cs" />
     <Compile Include="Contracts\Application\ApplicationExtendedData.cs" />
     <Compile Include="Contracts\EventDataForEntity.cs" />
+    <Compile Include="Contracts\Setting.cs" />
     <Compile Include="Contracts\User\ClientBalanceHistoryItem.cs" />
     <Compile Include="Contracts\User\EmailData.cs" />
     <Compile Include="Contracts\User\PasswordData.cs" />
@@ -89,20 +90,18 @@
     <Compile Include="Enums\MethodOfDelivery.cs" />
     <Compile Include="Enums\MethodOfTransit.cs" />
     <Compile Include="Enums\RoleType.cs" />
+    <Compile Include="Enums\SettingType.cs" />
     <Compile Include="Enums\TwoLetterISOLanguageName.cs" />
-    <Compile Include="Exceptions\AccessForbidenException.cs" />
     <Compile Include="Exceptions\DeleteConflictedWithConstraintException.cs" />
     <Compile Include="Exceptions\DublicateLoginException.cs" />
     <Compile Include="Exceptions\DublicateException.cs" />
-    <Compile Include="Exceptions\EntityUpdateConflict.cs" />
-    <Compile Include="Exceptions\EntityNotFoundException.cs" />
-    <Compile Include="Exceptions\InvalidLogicException.cs" />
-    <Compile Include="Exceptions\UnexpectedStateException.cs" />
+    <Compile Include="Exceptions\UpdateConflictException.cs" />
     <Compile Include="Helpers\EmailsHelper.cs" />
     <Compile Include="Helpers\Order.cs" />
     <Compile Include="Helpers\OrderType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Application\IAwbFileRepository.cs" />
+    <Compile Include="Repositories\ISettingRepository.cs" />
     <Compile Include="Repositories\User\IManagerRepository.cs" />
     <Compile Include="Resources\ApplicationFileType.Designer.cs">
       <DependentUpon>ApplicationFileType.resx</DependentUpon>
