--- a/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
+++ b/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
@@ -51,6 +51,7 @@
     </Compile>
     <Compile Include="Contracts\AirWaybillAggregate.cs" />
     <Compile Include="Contracts\Application\ApplicationEditData.cs" />
+    <Compile Include="Contracts\Application\BillEditData.cs" />
     <Compile Include="Contracts\EventData.cs" />
     <Compile Include="Contracts\ApplicationEventTemplateData.cs" />
     <Compile Include="Contracts\Application\ApplicationExtendedData.cs" />
@@ -101,6 +102,7 @@
     <Compile Include="Helpers\OrderType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Application\IAwbFileRepository.cs" />
+    <Compile Include="Repositories\Application\IBillRepository.cs" />
     <Compile Include="Repositories\ISettingRepository.cs" />
     <Compile Include="Repositories\User\IManagerRepository.cs" />
     <Compile Include="Resources\ApplicationFileType.Designer.cs">
