--- a/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
+++ b/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
@@ -54,7 +54,7 @@
     <Compile Include="Contracts\Application\BillEditData.cs" />
     <Compile Include="Contracts\EventData.cs" />
     <Compile Include="Contracts\ApplicationEventTemplateData.cs" />
-    <Compile Include="Contracts\Application\ApplicationExtendedData.cs" />
+    <Compile Include="Contracts\Application\ApplicationData.cs" />
     <Compile Include="Contracts\EventDataForEntity.cs" />
     <Compile Include="Contracts\Setting.cs" />
     <Compile Include="Contracts\User\ClientBalanceHistoryItem.cs" />
