--- a/Alicargo.TestHelpers/packages.config
+++ b/Alicargo.TestHelpers/packages.config
@@ -4,6 +4,11 @@
   <package id="AutoFixture.AutoMoq" version="3.18.5" targetFramework="net45" />
   <package id="EmitMapper" version="1.0.0" targetFramework="net45" />
   <package id="FluentAssertions" version="3.0.90" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Moq" version="4.2.1402.2112" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.2" targetFramework="net45" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
 </packages>
