--- a/Alicargo.DataAccess/Alicargo.DataAccess.csproj
+++ b/Alicargo.DataAccess/Alicargo.DataAccess.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Helpers\UserHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Application\AwbFileRepository.cs" />
+    <Compile Include="Repositories\Application\BillRepository.cs" />
     <Compile Include="Repositories\EventEmailRecipient.cs" />
     <Compile Include="Repositories\EventRepository.cs" />
     <Compile Include="Repositories\Application\ApplicationFileRepository.cs" />
