--- a/Alicargo.BlackBox.Tests/Alicargo.BlackBox.Tests.csproj
+++ b/Alicargo.BlackBox.Tests/Alicargo.BlackBox.Tests.csproj
@@ -130,6 +130,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Areas\Admin\Controllers\BillControllerTests.cs" />
+    <Compile Include="Areas\Admin\Controllers\BillSettingsControllerTests.cs" />
     <Compile Include="Controllers\AdminAwbControllerTests.cs" />
     <Compile Include="Controllers\AirWaybillControllerTests.cs" />
     <Compile Include="Controllers\Application\ApplicationControllerTests.cs" />
@@ -155,6 +157,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Alicargo.Core.Contracts\Alicargo.Core.Contracts.csproj">
+      <Project>{5D298560-5149-4DBB-9444-EE2EE9430483}</Project>
+      <Name>Alicargo.Core.Contracts</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Alicargo.Core\Alicargo.Core.csproj">
       <Project>{577B60F9-32F7-4117-97DA-40743BFF4CA0}</Project>
       <Name>Alicargo.Core</Name>
