save bill number

--- a/Alicargo.BlackBox.Tests/Alicargo.BlackBox.Tests.csproj
+++ b/Alicargo.BlackBox.Tests/Alicargo.BlackBox.Tests.csproj
@@ -131,6 +131,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Areas\Admin\Controllers\BillSettingsControllerTests.cs" />
+    <Compile Include="Areas\Admin\Serivices\BillManagerTests.cs" />
     <Compile Include="Controllers\AdminAwbControllerTests.cs" />
     <Compile Include="Controllers\AirWaybillControllerTests.cs" />
     <Compile Include="Controllers\Application\ApplicationControllerTests.cs" />
