--- a/Alicargo/packages.config
+++ b/Alicargo/packages.config
@@ -22,6 +22,7 @@
   <package id="Ninject.MVC3" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net45" />
+  <package id="PDFsharp" version="1.32.3057.0" targetFramework="net45" />
   <package id="T4MVC" version="3.9.1" targetFramework="net45" />
   <package id="T4MVCExtensions" version="3.9.1" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.5" targetFramework="net45" />
