--- a/Alicargo.BlackBox.Tests/Alicargo.BlackBox.Tests.csproj
+++ b/Alicargo.BlackBox.Tests/Alicargo.BlackBox.Tests.csproj
@@ -147,6 +147,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Services\Application\ApplicationListPresenterTests.cs" />
+    <Compile Include="Services\Users\ClientManagerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
