--- a/Alicargo.Jobs/Alicargo.Jobs.csproj
+++ b/Alicargo.Jobs/Alicargo.Jobs.csproj
@@ -54,9 +54,11 @@
     </Compile>
     <Compile Include="Application\Abstract\IApplicationEventTemplates.cs" />
     <Compile Include="Awb\AwbEventRecipientsFacade.cs" />
+    <Compile Include="Bill\EuroCourseJob.cs" />
     <Compile Include="Client\Balance\BalanceLocalizedDataHelper.cs" />
     <Compile Include="Client\Balance\PaymentEventData.cs" />
     <Compile Include="Awb\AwbEventLocalizedDataHelper.cs" />
+    <Compile Include="Core\RunnerController.cs" />
     <Compile Include="Helpers\Abstract\ICommonFilesFacade.cs" />
     <Compile Include="Client\ClientAdd\CommonLocalizedDataHelper.cs" />
     <Compile Include="Helpers\CommonEventMessageBuilder.cs" />
