--- a/Alicargo/Web.Release.config
+++ b/Alicargo/Web.Release.config
@@ -11,6 +11,7 @@
 	</connectionStrings>
 	<appSettings>
 		<add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="JobPausePeriod" value="00:00:30" />
+		<add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="EuroCourseUpdatePeriod" value="01:00:00" />
 	</appSettings>
 	<system.net>
 		<mailSettings xdt:Transform="Replace">
