--- a/Alicargo/Web.Dev.config
+++ b/Alicargo/Web.Dev.config
@@ -11,6 +11,7 @@
 	</connectionStrings>
 	<appSettings>
 		<add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="JobPausePeriod" value="00:00:10" />
+		<add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="EuroCourseUpdatePeriod" value="00:10:00" />
 	</appSettings>
 	<system.net>
 		<mailSettings xdt:Transform="Replace">
