--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Alicargo.BlackBox.Tests\packages.config" />
+  <repository path="..\Alicargo.Core.BlackBox.Tests\packages.config" />
   <repository path="..\Alicargo.Core.Tests\packages.config" />
   <repository path="..\Alicargo.Core\packages.config" />
   <repository path="..\Alicargo.DataAccess.BlackBox.Tests\packages.config" />
