--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -21,6 +21,7 @@
 		<add key="DefaultFrom" value="robot@alicargo.ru" />
 		<add key="JobPausePeriod" value="00:00:05" />
 		<add key="DefaultInsuranceRate" value="0.01" />
+		<add key="CourseSourceAttempts" value="5" />
 	</appSettings>
 	<connectionStrings>
 		<add connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True"
