config for CourseSource

--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -21,7 +21,7 @@
 		<add key="DefaultFrom" value="robot@alicargo.ru" />
 		<add key="JobPausePeriod" value="00:00:05" />
 		<add key="DefaultInsuranceRate" value="0.01" />
-		<add key="CourseSourceAttempts" value="5" />
+		<add key="CourseSourceAttempts" value="3" />
 	</appSettings>
 	<connectionStrings>
 		<add connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True"
@@ -98,7 +98,7 @@
 			</layout>
 		</appender>
 		<logger additivity="false" name="JobsLogger">
-			<level value="ERROR" />
+			<level value="WARN" />
 			<appender-ref ref="JobsLogger" />
 		</logger>
 	</log4net>
