--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -10,6 +10,7 @@
 		<add key="PreserveLoginUrl" value="true" />
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
 		<add key="StateId-Default" value="1" />
 		<add key="StateId-CargoInStock" value="6" />
 		<add key="StateId-CargoIsFlew" value="7" />
@@ -18,8 +19,12 @@
 		<add key="StateId-CargoReceived" value="11" />
 		<add key="CargoReceivedDaysToShow" value="10" />
 		<add key="StateId-CargoOnTransit" value="12" />
+
 		<add key="DefaultFrom" value="robot@alicargo.ru" />
+		<add key="SupportEmail" value="6alyamov@gmail.com" />
+
 		<add key="JobPausePeriod" value="00:00:05" />
+		
 		<add key="DefaultInsuranceRate" value="0.01" />
 		<add key="CourseSourceAttempts" value="3" />
 	</appSettings>
